<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.NewsDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/ll_author_date"
                android:src="@drawable/ic_baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:hint="@string/placeholderjudul"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_author_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/author_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholderDate"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_10dp"
                android:id="@+id/action_share"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/margin_10dp"
                android:layout_below="@id/imageView"
                android:elevation="5dp">
                <TextView
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:textStyle="bold"
                    android:text="Share"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="@dimen/margin_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:drawableRightCompat="@drawable/ic_baseline_share_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="@dimen/margin_10dp"
                android:id="@+id/tv_content"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholdercontent"
                android:layout_below="@id/action_share"/>
        </RelativeLayout>
    </ScrollView>
    </FrameLayout>
</layout>